fix: some fixes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div></div>
             </div>
             <div class="container">
-                <script>
+                <!-- <script>
                     document.addEventListener('DOMContentLoaded', () => {
                     let audio = document.querySelector('audio');
                     
@@ -53,15 +53,15 @@
                 </script>
                 <audio id="player" controls style="width:100%;max-width:300px;display: none;" loop>
                     <source src="https://ainogg.github.io/audio/ZivertLYRIQ.mp3" type="audio/mp3">
-                </audio>
+                </audio> -->
                 <ul class="menu__list">
                     <li><a class="home__page" href="#top">домашняя</a></li>
                     <li><a href="my-skills.html" target="_blank">JS</a></li>
                     <li><a href="portfolio.html" target="_blank">сайты</a></li>
-                    <li onclick="document.getElementById('player').play()">обо мне</li>
+                    <!-- <li onclick="document.getElementById('player').play()">обо мне</li>
                     <li onclick="document.getElementById('player').pause()">Пауза</li>
                     <li onclick="document.getElementById('player').volume+=0.1">+</li>
-                    <li onclick="document.getElementById('player').volume-=0.1">-</li>
+                    <li onclick="document.getElementById('player').volume-=0.1">-</li> -->
                 </ul>
             </div>
 
